--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 }
  body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Helvetica Neue', Tahoma, Geneva, Verdana, sans-serif;
             background: #000000;
             overflow-x: hidden;
         }
@@ -54,6 +54,8 @@
             max-width: 1280px;
             margin: 0 auto;
             position: relative;
+            font-family: 'Inter', Tahoma, Geneva, Verdana, sans-serif;
+            letter-spacing: 0.5px;
         }
         .services-container .line-1{
          width: 1px;
@@ -77,7 +79,7 @@
             width: 100%;
             height: 1px;
             position: absolute;
-            top: 59%;
+            top: 54%;
             left: 0;
             background: radial-gradient(50% 50% at 50% 50%, #D7F346 58.17%, #000000 100%);
             opacity: 0.52;
@@ -142,10 +144,18 @@
             position: relative;
             z-index: 1;
         }
+
+        
+        .service-card.auto-hover::before {
+          transform: scaleY(1);
+          transform-origin: center;
+       }
+
         .learn-more {
           display: inline-block;
           margin-top: 1.5rem;
-          color: #1100ff;
+          color: rgb(125, 211, 252)
+;
           font-weight: 600;
           text-decoration: none;
           transition: color 0.3s ease;
@@ -503,12 +513,14 @@
             color: #1a1a1a;
             line-height: 1.3;
             margin-bottom: 8px;
+            text-align: center;
         }
 
         .card-description {
             font-size: 17px;
             color: #4a4a4a;
             line-height: 1.7;
+            text-align: center;
         }
 
        
@@ -615,12 +627,12 @@
   }
 
   .card-subtitle {
-    font-size: 15px;
+    font-size: 18px;
     text-align: center;
   }
 
   .card-description {
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
     margin-top: -20px;
   }
